[fix] adapt button not showing
(cherry picked from commit 2464f3ad9692da9ad7785cd07ca97485d936597d)

--- a/html/com_publications/publications.scss
+++ b/html/com_publications/publications.scss
@@ -70,10 +70,21 @@
     }
     .cta-buttons {
       text-align: center;
+      font-size: inherit;
       
       p {
         display: inline-block;
-        margin: 0;
+        margin: .2ems;
+      }
+
+      .btn-group  {
+        font-size: 100%;
+
+        > .btn {
+          + .btn {
+            margin-left: -10px;
+          }
+        }
       }
     }
   }
